tests/compile_fail/debug/lifetime_no_debug.stderr
error[E0277]: `NoDebug<'_>` doesn't implement `Debug`
 --> tests/compile_fail/debug/lifetime_no_debug.rs:5:10
  |
5 | #[derive(derive_more::Debug)]
  |          ^^^^^^^^^^^^^^^^^^ `NoDebug<'_>` cannot be formatted using `{:?}`
  |
  = help: the trait `Debug` is not implemented for `NoDebug<'_>`, which is required by `&NoDebug<'_>: Debug`
  = note: add `#[derive(Debug)]` to `NoDebug<'_>` or manually `impl Debug for NoDebug<'_>`
  = note: required for `&NoDebug<'_>` to implement `Debug`
  = note: required for the cast from `&&NoDebug<'_>` to `&dyn Debug`
  = note: this error originates in the derive macro `derive_more::Debug` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NoDebug<'_>` with `#[derive(Debug)]`
  |
1 + #[derive(Debug)]
2 | struct NoDebug<'a> {
  |
